--- a/shareaza/Shareaza_14.vcxproj
+++ b/shareaza/Shareaza_14.vcxproj
@@ -140,6 +140,9 @@
     <Manifest />
     <PostBuildEvent />
     <PostBuildEvent />
+    <Manifest>
+      <AdditionalManifestFiles>compatibility.manifest</AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <PreBuildEvent>
@@ -186,6 +189,9 @@
     </Bscmake>
     <PostBuildEvent />
     <PostBuildEvent />
+    <Manifest>
+      <AdditionalManifestFiles>compatibility.manifest</AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <PreBuildEvent>
@@ -241,6 +247,9 @@
     </Bscmake>
     <PostBuildEvent />
     <PostBuildEvent />
+    <Manifest>
+      <AdditionalManifestFiles>compatibility.manifest</AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <PreBuildEvent>
@@ -295,6 +304,9 @@
     </Bscmake>
     <PostBuildEvent />
     <PostBuildEvent />
+    <Manifest>
+      <AdditionalManifestFiles>compatibility.manifest</AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AlbumFolder.cpp" />
