Updated MiniUPnPc library to 1.9.20151008.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9611 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/MiniUPnPc/MiniUPnPc_10.vcxproj
+++ b/MiniUPnPc/MiniUPnPc_10.vcxproj
@@ -87,7 +87,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>MINIUPNP_EXPORTS;_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;_USRDLL;MINIUPNPC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>MINIUPNP_EXPORTS;_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;_USRDLL;MINIUPNPC_EXPORTS;_WINSOCK_DEPRECATED_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <MinimalRebuild>false</MinimalRebuild>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
@@ -105,7 +105,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>MINIUPNP_EXPORTS;_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;_USRDLL;MINIUPNPC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>MINIUPNP_EXPORTS;_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;_USRDLL;MINIUPNPC_EXPORTS;_WINSOCK_DEPRECATED_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <MinimalRebuild>false</MinimalRebuild>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
@@ -125,7 +125,7 @@
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>MINIUPNP_EXPORTS;_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_WINDOWS;_USRDLL;MINIUPNPC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>MINIUPNP_EXPORTS;_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_WINDOWS;_USRDLL;MINIUPNPC_EXPORTS;_WINSOCK_DEPRECATED_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
@@ -150,7 +150,7 @@
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>MINIUPNP_EXPORTS;_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_WINDOWS;_USRDLL;MINIUPNPC_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>MINIUPNP_EXPORTS;_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_WINDOWS;_USRDLL;MINIUPNPC_EXPORTS;_WINSOCK_DEPRECATED_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)\miniupnpc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -171,16 +171,18 @@
   <ItemGroup>
     <ClInclude Include="miniupnpcstrings.h" />
     <ClInclude Include="miniupnpc\connecthostport.h" />
-    <ClInclude Include="miniupnpc\declspec.h" />
     <ClInclude Include="miniupnpc\igd_desc_parse.h" />
     <ClInclude Include="miniupnpc\minisoap.h" />
+    <ClInclude Include="miniupnpc\minissdpc.h" />
     <ClInclude Include="miniupnpc\miniupnpc.h" />
     <ClInclude Include="miniupnpc\miniupnpctypes.h" />
+    <ClInclude Include="miniupnpc\miniupnpc_declspec.h" />
     <ClInclude Include="miniupnpc\miniwget.h" />
     <ClInclude Include="miniupnpc\minixml.h" />
     <ClInclude Include="miniupnpc\portlistingparse.h" />
     <ClInclude Include="miniupnpc\receivedata.h" />
     <ClInclude Include="miniupnpc\upnpcommands.h" />
+    <ClInclude Include="miniupnpc\upnpdev.h" />
     <ClInclude Include="miniupnpc\upnperrors.h" />
     <ClInclude Include="miniupnpc\upnpreplyparse.h" />
     <ClInclude Include="resource.h" />
@@ -191,12 +193,14 @@
     <ClCompile Include="miniupnpc\connecthostport.c" />
     <ClCompile Include="miniupnpc\igd_desc_parse.c" />
     <ClCompile Include="miniupnpc\minisoap.c" />
+    <ClCompile Include="miniupnpc\minissdpc.c" />
     <ClCompile Include="miniupnpc\miniupnpc.c" />
     <ClCompile Include="miniupnpc\miniwget.c" />
     <ClCompile Include="miniupnpc\minixml.c" />
     <ClCompile Include="miniupnpc\portlistingparse.c" />
     <ClCompile Include="miniupnpc\receivedata.c" />
     <ClCompile Include="miniupnpc\upnpcommands.c" />
+    <ClCompile Include="miniupnpc\upnpdev.c" />
     <ClCompile Include="miniupnpc\upnperrors.c" />
     <ClCompile Include="miniupnpc\upnpreplyparse.c" />
   </ItemGroup>
